<resources>
    <string name="app_name">BeaconInfo</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="map">Map</string>
    <string name="near">Near</string>
    <string name="log">Log</string>

    <string name="near_title">NearSpots</string>
    <string name="def_card_main">SpotName</string>
    <string name="def_card_sub">Category</string>

    <string name="temple_shrine">Temple/Shrine</string>
    <string name="buddha">Buddha</string>
    <string name="historical_interest_site">Historical/Interest</string>
    <string name="beach">Beach</string>

    <string name="item_title">Sort</string>

    <string name="visit">Go to this place</string>

    <string name="action_settings">Settings</string>
    <string name="info">Infomation</string>

    <string-array name="dummy">
        <item>仏日庵</item>
        <item>東慶寺</item>
        <item>浄智寺</item>
        <item>半僧坊大権現</item>
        <item>明月院</item>
        <item>妙高院</item>
        <item>建長寺</item>
        <item>来迎寺</item>
        <item>覚園時</item>
        <item>瑞泉寺</item>
        <item>葛原岡神社</item>
        <item>円応寺</item>
        <item>浄光明寺</item>
        <item>海藏寺</item>
        <item>光触寺</item>
        <item>鶴岡八幡宮</item>
        <item>浄妙寺</item>
        <item>荏柄天神社</item>
        <item>鎌倉宮</item>
        <item>杉本寺</item>
        <item>岐阜県</item>
        <item>静岡県</item>
        <item>愛知県</item>
        <item>三重県</item>
        <item>滋賀県</item>
        <item>京都府</item>
        <item>大阪府</item>
        <item>兵庫県</item>
        <item>奈良県</item>
        <item>和歌山県</item>
        <item>鳥取県</item>
        <item>島根県</item>
        <item>岡山県</item>
        <item>広島県</item>
        <item>山口県</item>
        <item>徳島県</item>
        <item>香川県</item>
        <item>愛媛県</item>
        <item>高知県</item>
        <item>福岡県</item>
        <item>佐賀県</item>
        <item>長崎県</item>
        <item>熊本県</item>
        <item>大分県</item>
        <item>宮崎県</item>
        <item>鹿児島県</item>
        <item>沖縄県</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_guide">GuideActivity</string>
    <string name="title_activity_beacon_info">BeaconInfoActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
