<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="info.redspirit.beaconinfo.ItemFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/item_title"
        android:id="@+id/textView3"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true">

        <android.support.v7.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/view_cardview_margin_leftright"
            android:layout_marginRight="@dimen/view_cardview_margin_leftright"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="10dp"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true">

            <LinearLayout
                android:id="@+id/cardLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="@dimen/view_cardview_padding_topbottom"
                    android:paddingTop="@dimen/view_cardview_padding_topbottom">

                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_marginLeft="@dimen/view_cardview_padding_leftright"
                        android:layout_marginRight="@dimen/view_cardview_padding_leftright"
                        android:src="@android:drawable/sym_def_app_icon" />

                    <TextView
                        android:id="@+id/textView_main"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="@dimen/view_cardview_textsize_main"
                        android:text="@string/def_card_main" />
                </LinearLayout>

                <TextView
                    android:id="@+id/textView_sub"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border"
                    android:gravity="center"
                    android:paddingBottom="@dimen/view_cardview_padding_topbottom"
                    android:paddingLeft="@dimen/view_cardview_padding_leftright"
                    android:paddingRight="@dimen/view_cardview_padding_leftright"
                    android:paddingTop="@dimen/view_cardview_padding_topbottom"
                    android:textSize="@dimen/view_cardview_textsize_sub"
                    android:text="@string/def_card_sub" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

    </ScrollView>
</RelativeLayout>
