<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="info.redspirit.beaconinfo.NearSpotFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/near_title"
        android:id="@+id/textView2"
        android:layout_gravity="left|top"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="0dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="0dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="0dp"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/cardLinear">

            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/view_cardview_margin_leftright"
                android:layout_marginRight="@dimen/view_cardview_margin_leftright"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp"
                android:layout_below="@+id/textView2"
                android:layout_centerHorizontal="true">

                <LinearLayout
                    android:id="@+id/cardLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="@dimen/view_cardview_padding_topbottom"
                        android:paddingTop="@dimen/view_cardview_padding_topbottom">

                        <ImageView
                            android:id="@+id/imageView"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginLeft="@dimen/view_cardview_padding_leftright"
                            android:layout_marginRight="@dimen/view_cardview_padding_leftright"
                            android:src="@android:drawable/sym_def_app_icon" />

                        <TextView
                            android:id="@+id/textView_main"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textSize="@dimen/view_cardview_textsize_main"
                            android:text="@string/def_card_main" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView_sub"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:gravity="center"
                        android:paddingBottom="@dimen/view_cardview_padding_topbottom"
                        android:paddingLeft="@dimen/view_cardview_padding_leftright"
                        android:paddingRight="@dimen/view_cardview_padding_leftright"
                        android:paddingTop="@dimen/view_cardview_padding_topbottom"
                        android:textSize="@dimen/view_cardview_textsize_sub"
                        android:text="@string/def_card_sub" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/view_cardview_margin_leftright"
                android:layout_marginRight="@dimen/view_cardview_margin_leftright"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp"
                android:layout_below="@+id/textView2"
                android:layout_centerHorizontal="true">

                <LinearLayout
                    android:id="@+id/cardLayout2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="@dimen/view_cardview_padding_topbottom"
                        android:paddingTop="@dimen/view_cardview_padding_topbottom">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginLeft="@dimen/view_cardview_padding_leftright"
                            android:layout_marginRight="@dimen/view_cardview_padding_leftright"
                            android:src="@android:drawable/sym_def_app_icon" />

                        <TextView
                            android:id="@+id/textView_main2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textSize="@dimen/view_cardview_textsize_main"
                            android:text="@string/def_card_main" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView_sub2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:gravity="center"
                        android:paddingBottom="@dimen/view_cardview_padding_topbottom"
                        android:paddingLeft="@dimen/view_cardview_padding_leftright"
                        android:paddingRight="@dimen/view_cardview_padding_leftright"
                        android:paddingTop="@dimen/view_cardview_padding_topbottom"
                        android:textSize="@dimen/view_cardview_textsize_sub"
                        android:text="@string/def_card_sub" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/view_cardview_margin_leftright"
                android:layout_marginRight="@dimen/view_cardview_margin_leftright"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp"
                android:layout_below="@+id/textView2"
                android:layout_centerHorizontal="true">

                <LinearLayout
                    android:id="@+id/cardLayout3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="@dimen/view_cardview_padding_topbottom"
                        android:paddingTop="@dimen/view_cardview_padding_topbottom">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginLeft="@dimen/view_cardview_padding_leftright"
                            android:layout_marginRight="@dimen/view_cardview_padding_leftright"
                            android:src="@android:drawable/sym_def_app_icon" />

                        <TextView
                            android:id="@+id/textView_main3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textSize="@dimen/view_cardview_textsize_main"
                            android:text="@string/def_card_main" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView_sub3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:gravity="center"
                        android:paddingBottom="@dimen/view_cardview_padding_topbottom"
                        android:paddingLeft="@dimen/view_cardview_padding_leftright"
                        android:paddingRight="@dimen/view_cardview_padding_leftright"
                        android:paddingTop="@dimen/view_cardview_padding_topbottom"
                        android:textSize="@dimen/view_cardview_textsize_sub"
                        android:text="@string/def_card_sub" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/view_cardview_margin_leftright"
                android:layout_marginRight="@dimen/view_cardview_margin_leftright"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp"
                android:layout_below="@+id/textView2"
                android:layout_centerHorizontal="true">

                <LinearLayout
                    android:id="@+id/cardLayout4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="@dimen/view_cardview_padding_topbottom"
                        android:paddingTop="@dimen/view_cardview_padding_topbottom">

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginLeft="@dimen/view_cardview_padding_leftright"
                            android:layout_marginRight="@dimen/view_cardview_padding_leftright"
                            android:src="@android:drawable/sym_def_app_icon" />

                        <TextView
                            android:id="@+id/textView_main4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textSize="@dimen/view_cardview_textsize_main"
                            android:text="@string/def_card_main" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView_sub4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:gravity="center"
                        android:paddingBottom="@dimen/view_cardview_padding_topbottom"
                        android:paddingLeft="@dimen/view_cardview_padding_leftright"
                        android:paddingRight="@dimen/view_cardview_padding_leftright"
                        android:paddingTop="@dimen/view_cardview_padding_topbottom"
                        android:textSize="@dimen/view_cardview_textsize_sub"
                        android:text="@string/def_card_sub" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/view_cardview_margin_leftright"
                android:layout_marginRight="@dimen/view_cardview_margin_leftright"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10dp"
                android:layout_below="@+id/textView2"
                android:layout_centerHorizontal="true">

                <LinearLayout
                    android:id="@+id/cardLayout5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_horizontal"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingBottom="@dimen/view_cardview_padding_topbottom"
                        android:paddingTop="@dimen/view_cardview_padding_topbottom">

                        <ImageView
                            android:id="@+id/imageView5"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_marginLeft="@dimen/view_cardview_padding_leftright"
                            android:layout_marginRight="@dimen/view_cardview_padding_leftright"
                            android:src="@android:drawable/sym_def_app_icon" />

                        <TextView
                            android:id="@+id/textView_main5"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:textSize="@dimen/view_cardview_textsize_main"
                            android:text="@string/def_card_main" />
                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView_sub5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/border"
                        android:gravity="center"
                        android:paddingBottom="@dimen/view_cardview_padding_topbottom"
                        android:paddingLeft="@dimen/view_cardview_padding_leftright"
                        android:paddingRight="@dimen/view_cardview_padding_leftright"
                        android:paddingTop="@dimen/view_cardview_padding_topbottom"
                        android:textSize="@dimen/view_cardview_textsize_sub"
                        android:text="@string/def_card_sub" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
